src/scss/themes/ng/body.scss
/* ... */
.cui-button-visual {
	display: flex;
	align-items: center;
	justify-content: center;
	max-width: 100%;
	flex-grow: 1;
}

.cui-button-button,
.cui-button-select {
	flex: 0 0 auto;
	align-self: flex-start;
	align-items: center;
	justify-content: center;
	display: inline-flex; // if a button is not in a flex container, behave like "inline-block"
	white-space: nowrap;
	max-width: 100%;

	.cui-button-visual {
	  padding: 0 $padding/2;
	  height: $button-height;
	  min-width: 27px;
	  line-height: $button-height - 2px;
	  color: $button-color;
	  background: $button-background;
	  border: 1px solid $button-border;
	  border-radius: $button-radius;
	}

	&.cui-layer-open,
	&:active,
	&.cui-active {
		.cui-button-visual {
	  	background: $button-pressed;
	  }
	}

	&.cui-disabled {
	  cursor: default;
	  opacity: 1;
	  pointer-events: auto;

		.cui-button-visual {
		  color: $disabled-color;
		  border-color: $button-border;
	  }

	  &:active {
	  	.cui-button-visual {
	  		background: $button-background;
	  	}
	  }

	  &.cui-active,
	  &.cui-active:active {
	  	.cui-button-visual {
	  		color: $button-active-disabled-text;
	  		background: $button-active;
	  		border-color: $button-active-border;
	  	}
	  }
	}

	&.cui-button-appearance-important, // removed [role] - makes it too specific
	&.cui-button--primary {
		.cui-button-visual {
			color: $on-highlight-color;
			background: $highlight-color;
			border-color: darken($highlight-color, 7%);
		}

		&.cui-layer-open,
		&:active {
			.cui-button-visual {
				color: darken($on-highlight-color, 9%);
				background: darken($highlight-color, 9%);
				border-color: darken($highlight-color, 16%);
			}
		}
	}

	&.cui-active {
		.cui-button-visual {
			color: $button-active-text;
			background: $button-active;
			border-color: $button-active-border;
		}

		&.cui-layer-open,
		&:active {
			.cui-button-visual {
				color: $button-active-pressed-text;
				background: $button-active-pressed;
				border-color: $button-active-pressed;
			}
		}
	}

	&:focus {
		outline: none;

		.cui-button-visual {
			@include border-focus;
		}
	}
}

.cui-button-appearance-flat {
	align-self: auto;
	vertical-align: top;

	.cui-button-visual {
		@include button-reset;
		height: 24px;
		padding: 3px 0;
		border-radius: $button-radius;
		color: desaturate($highlight-color, 80%);
	}

	&:active,
	&.cui-layer-open,
	&.cui-active {
		.cui-button-visual {
			background: none;
			color: desaturate($highlight-color, 40%);
		}
	}

  &:focus {
  	.cui-button-visual {
  		@include inner-focus;
  	}
  }
}

.cui-button-select {
	.cui-button-visual {
		padding: 0 4px 0 8px;
	}

	.cui-button-center {
		padding-right: 6px;

		[data-max-chars] {
			text-align: inherit;
		}

		span:empty:after {
			content: " ";
		}
	}
}

.cui-button-left,
.cui-button-center,
.cui-button-right {
	display: flex;
	flex: 0 0 auto;
	justify-content: center;
	padding: 0 3px;

	&:empty {
		display: none;
	}
}

.cui-button-center {
	flex-shrink: 1;
	min-width: 0;

	span {
		@include ellipsis;
	}
}

.cui-button-size-mini {
	font-size: 12px;
  height: 26px;

  &.cui-button-appearance-flat {
  	height: auto;
  }

  .cui-button-visual {
  	height: 20px;
  	padding: 0 $padding/4;
  }

  .fa {
  	font-size: 11px;
  }

  .cui-icon-svg {
  	transform: scale(0.75);

  	&.svg-close {
  		transform: none;
  		width: 9px;
  		height: 9px;
  	}
  }
}

.cui-button-size-big {
	font-size: 11px;
	height: 60px;

	&.cui-button-appearance-flat {
		height: auto;
	}

	.cui-buttonbar-group & {
		&:not(:first-child) {
			margin-left: 1px;
		}
	}

	.cui-button-visual {
		line-height: 18px;
		height: auto;
		flex-direction: column;
		border-width: 0;
		padding: $padding/2 $padding/2 0;
	}

	.cui-button-left {
		padding: 3px;
	}

	.fa {
		font-size: 21px;
	}
}

.cui-button-size-bigger {
	font-size: 18px;
	height: 43px;

	&.cui-button-appearance-flat {
		height: auto;
	}
}

a[role="button"].cui-button-appearance-link {
	height: initial;
	> .cui-button-center {
		word-break: break-all;
	}
}

.cui-button-appearance-link[role] {
	display: inline-flex;
	width: auto !important;

	&,
	&:active {
		.cui-button-visual {
			@include button-reset;
			color: $highlight-color;
			line-height: 18px;
		}
	}

	&:focus {
		.cui-button-visual {
			text-decoration: underline;
		}
	}

	.cui-button-center {
		padding: 0;

		span {
			white-space: normal;
		}
	}
}


// Checkbox
.cui-checkbox {
	min-width: 0;
	display: inline-block;

	&.cui-data-field-disabled {
		opacity: 1;
	}

	&--icon {
		.cui-button-checkbox {
			.cui-button-left i {
				border: none;
				background: none;
				font-size: 14px;
				opacity: 0.2;
			}

			&.cui-active {
				.cui-button-left i {
					background: none;
					color: inherit;
					text-shadow: none;
					opacity: 1;
				}
			}
		}
	}

	&--multiline {
		.cui-button-checkbox {
			white-space: initial;

			.cui-button-center {
				span {
					white-space: normal;
				}
			}
		}
	}
}
/* ... */

